- Info now shows total upvotes and month upvotes.
- Added a refresh button to info.
- Added a back reaction on `g*help` (only shows when you enter a category).
- The server count of the bot is now posted on DBots and BotsForDiscord.

- Added a system to store transactions.
Check out all your tokens transactions after the update with `g*tokens transactions`!

- Fixed a bug that turned bombs into nothing when you flag them. How did this take so long?
- Fixed quizzes glitching when nobody scores.
- Fixed Uno not updating messages properly.
Enjoy! ~ deprilula28